K8S/Services/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernates.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.normandev.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
